test/results/afl-crash-e.owltest.stderr
error: unexpected token '0'

  ( ( ( 0 0 0 0 00 00 00 0 0 ] 0 0 0 0 00 00 00 0 0 ] ) 
        ~                                               

